--- a/style.css
+++ b/style.css
@@ -97,6 +97,11 @@ nav i{
     width: 70%;
     border-radius: 50%;
     box-shadow: 2px 2px 15px rgb(235, 10, 10);
+    transition: .5s ease-in-out;
+}
+
+.left img:hover{
+    box-shadow: 2px 2px 15px rgb(29, 124, 212);
 }
 
 .right{
@@ -124,6 +129,13 @@ nav i{
     font-size: 1.2rem;
     margin-top: 20px;
     cursor: pointer;
+    transition: .3s ease-in-out;
+}
+
+.right button:hover{
+    scale: 1.1;
+    transition: .3s ease-in-out;
+    background-color: #0f5699;
 }
 
 .right-social i{
@@ -132,6 +144,12 @@ nav i{
     font-size: 1.5rem;
     padding: 10px;
     cursor: pointer;
+}
+
+.right-social i:hover{
+    color: rgb(47, 192, 236);
+    scale: 1.3;
+    transition: .3s ease-in-out;
 }
 /* hero section ends */
 
