--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ nav{
 }
 
 .logo{
-    color: rgb(245, 71, 65);
+    color: rgb(65, 194, 245);
     margin-left: 30px;
     font-size: 2rem;
     font-weight: 900;
@@ -33,6 +33,7 @@ nav{
 
 .logo:hover{
     scale: 1.1;
+    color: rgb(30, 255, 0);
 }
 
 .last{
@@ -60,7 +61,7 @@ nav i{
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #2291eb;
+    background-color: rgb(25, 231, 25);
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
     
@@ -72,7 +73,8 @@ nav i{
 }
 
 .links a:hover{
-    color: rgb(231, 25, 25);
+    color: rgb(32, 231, 25);
+    font-weight: 500;
 }
 
 /* navbar ends */
@@ -96,12 +98,12 @@ nav i{
     height: 90%;
     width: 70%;
     border-radius: 50%;
-    box-shadow: 2px 2px 15px rgb(235, 10, 10);
+    box-shadow: 2px 2px 15px rgb(65, 194, 245);
     transition: .5s ease-in-out;
 }
 
 .left img:hover{
-    box-shadow: 2px 2px 15px rgb(29, 124, 212);
+    box-shadow: 2px 2px 15px rgb(29, 212, 84);
 }
 
 .right{
@@ -110,32 +112,82 @@ nav i{
 }
 
 .right span{
-    color: rgb(214, 71, 71);
+    color: rgb(44, 196, 14);
 }
+
+
 .right h2{
     margin-top: 10rem;
 }
 
 .right h1{
     font-size: 3rem;
+    margin-top: 10px;
 }
 
-.right button{
-    padding: 10px 20px;
-    border-radius: 10px;
-    border: none;
-    background-color: rgb(245, 71, 65);
-    color: white;
-    font-size: 1.2rem;
+.right p{
+    margin-top: 10px;
+    /* font-size: 1.2rem; */
+    color: rgb(210, 215, 216);
+}
+
+.btn1{
     margin-top: 20px;
+    padding: 10px 20px;
+    position: relative;
+    font-size: 20px;
+    font-weight: 600;
+    width: 200px;
+    height: 50px;
+    background: rgba(4, 185, 19, 0.849);
+    border-color: rgba(27, 189, 12, 0.788);
+    color: rgb(255, 255, 255);
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgb(44, 195, 233);
     cursor: pointer;
-    transition: .3s ease-in-out;
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s all ease;
 }
 
-.right button:hover{
-    scale: 1.1;
-    transition: .3s ease-in-out;
-    background-color: #0f5699;
+.btn1::before{
+    content: "";
+    position: absolute; 
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 50%;
+    background: rgba(5, 132, 170, 0.911);
+    z-index: -1;
+    transform: translateX(-100%);
+    transition: .5s all ease;
+}
+
+.btn1:hover::before{
+    transform: translateX(0%) rotate(180deg);
+}
+
+.btn1::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    height: 100%;
+    width: 50%;
+    background: rgba(5, 132, 170, 0.911);
+    z-index: -1;
+    transform: translateX(100%);
+    transition: .5s all ease;
+}
+
+.btn1:hover::after{
+    transform: translateX(0%) rotate(-180deg);
+}
+
+
+.btn1:hover{
+    color: white;
+    border-color: white;
 }
 
 .right-social i{
@@ -152,6 +204,91 @@ nav i{
     transition: .3s ease-in-out;
 }
 /* hero section ends */
+
+
+/* about section starts */
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0px;
+    width: 100%;
+}
+
+.container-txt{
+    height: 300px;
+    width: 600px;
+    padding-top: 40px;
+}
+
+.container-txt h1{
+    font-size: 3rem;
+    color: rgb(19, 214, 100);
+}
+
+.container-txt p{
+    font-family: "Ubuntu Mono", monospace;
+    font-size: 1rem;
+    padding-top: 20px;
+    line-height: 22px;
+}
+
+.coder{
+    height: 300px;
+    width: 400px;
+    margin-left: 150px;
+}
+
+.coder img{
+    height: 400px;
+    width: 480px;
+}
+
+
+/* button of about section starts */
+.btn2{
+    margin-left: 100px;
+    position: relative;
+    font-size: 20px;
+    font-weight: 900;
+    width: 200px;
+    height: 50px;
+    background: rgba(16, 177, 88, 0.836);
+    border: 2px solid rgb(16, 167, 16);
+    color: rgb(255, 255, 255);
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgb(201, 189, 16);
+    cursor: pointer;
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s all ease;
+}
+
+.btn2::before{
+    content: "";
+    position: absolute; 
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgb(12, 95, 128);
+    z-index: -1;
+    transform: translateX(-100%);
+    transition: .5s all ease;
+}
+
+.btn2:hover::before{
+    transform: translateX(0%);
+}
+
+
+.btn2:hover{
+    color: white;
+    border-color: white;
+}
+/* button of about section ends */
+
+/* about section ends */
 
 
 /* responsiveness */
@@ -202,4 +339,48 @@ nav i{
         margin-top: 10vh;
         padding-top: 0px;
     }
+
+    .right h1{
+        margin-top: 0px;
+    }
+
+    /* container section/about */
+    .res{
+        margin-bottom: 50px;
+        margin-left: 5vw;
+    }
+
+    .container{
+        display: block;
+        height: 100%;
+        width: 100%;
+        margin-top: 0px;
+        margin-bottom: 25px;
+    }
+
+    .container-txt{
+        height: 100%;
+        width: 100%;
+    }
+
+    .container-txt h1{
+        font-size: 2rem;
+        border-bottom: 2px solid greenyellow;
+        padding-bottom: 10px;
+    }
+
+    .container-txt p{
+        font-size: 1rem;
+        padding-top: 10px;
+    }
+
+    .coder{
+        display: none;
+    }
+
+    .btn2{
+        margin-left: 1vw;
+    }
+
+    /* skill section */
 }
