custom cursor removed

--- a/style.css
+++ b/style.css
@@ -7,21 +7,16 @@
     color: white;
 }
 
-#cursor{
+/* #cursor{
     position: absolute;
     height: 30px;
     width: 30px;
-    background-color: rgba(39, 148, 225, 0.744);
-    color: greenyellow;
-    font-size: larger;
-    font-weight: 900;
+    background-color: rgb(255, 22, 22);
     border-radius: 50%;
     transition: all linear .2s;
     mix-blend-mode: difference;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+    filter: blur(5px);
+} */
 
 
 
