--- a/style.css
+++ b/style.css
@@ -566,3 +566,17 @@ footer{
         margin-left: 1vw;
     }
 }
+
+/* custom scrollbar */
+::-webkit-scrollbar{
+    width: 10px;
+}
+
+::-webkit-scrollbar-track{
+   background-color: rgb(0, 0, 0);
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: rgba(11, 172, 30, 0.893);
+    border-radius: 10px;
+}   
