--- a/style.css
+++ b/style.css
@@ -143,26 +143,46 @@ nav i{
 .right{
     height: 100%;
     width: 50%;
+    z-index: 1;
+}
+
+.circle{
+    pointer-events: none;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    transform: translate(-50%,-50%);
+    width: 30px;
+    height: 30px;
+    background-color: rgba(228, 228, 228, 0.678);
+    border-radius: 50%;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) .5s;    
 }
 
 .right span{
     color: rgb(44, 196, 14);
+    background: none;
 }
 
 
 .right h2{
     margin-top: 10rem;
+    background: none;
 }
 
 .right h1{
     font-size: 3rem;
     margin-top: 10px;
+    z-index: 2;
+    background: none;
 }
 
 .right p{
     margin-top: 10px;
     /* font-size: 1.2rem; */
     color: rgb(210, 215, 216);
+    background: none;
 }
 
 .btn1{
@@ -191,7 +211,7 @@ nav i{
     left: 0;
     height: 100%;
     width: 50%;
-    background: rgba(5, 132, 170, 0.911);
+    background: blue;
     z-index: -1;
     transform: translateX(-100%);
     transition: .5s all ease;
@@ -208,7 +228,7 @@ nav i{
     left: 50%;
     height: 100%;
     width: 50%;
-    background: rgba(5, 132, 170, 0.911);
+    background: blue;
     z-index: -1;
     transform: translateX(100%);
     transition: .5s all ease;
@@ -347,26 +367,26 @@ nav i{
     /* margin-top: 10rem; */
     margin-bottom: 50px;
     padding: 40px 40px;
-    animation: skills linear;
+    /* animation: skills linear;
     animation-timeline: view();
-    animation-range: entry(0) cover;
+    animation-range: entry(0) cover; */
 }
 
 
 /* for animation of skill boxes */
-@keyframes skills{
+/* @keyframes skills{
     from{
-        opacity: 0%;
-    }
-    to{
         opacity: 100%;
     }
-}
+    to{
+        opacity: 0%;
+    }
+} */
 
 /* add background image to the box and do animation with before and after with texts here */
 .box1{
-    background-color: rgba(31, 132, 190, 0.753);
-    height: 300px;
+    background-color: #2E2E2E;
+    height: 250px;
     width: 300px;
     color: rgb(0, 0, 0);
     font-size: 1.5rem;
@@ -375,7 +395,7 @@ nav i{
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    box-shadow: 4px 5px 20px 5px rgb(155, 154, 154);
+    /* box-shadow: 4px 5px 20px 5px rgba(78, 78, 78, 0.87); */
     position: relative;
     overflow: hidden;
     z-index: 1;
@@ -384,9 +404,11 @@ nav i{
 }
 
 .box1:hover{
-    scale: 1.1;
-    box-shadow: 4px 5px 20px 5px rgb(219, 198, 6);
-    transform: rotate(3deg);
+    /* scale: 1.1; */
+    /* box-shadow: 4px 5px 20px 5px rgb(219, 198, 6); */
+    transform: translate(0,-20px); 
+    transition: .3s ease-in;
+    background:rgb(16, 167, 16);
 }
 
 .heading, .paragraph{
@@ -395,8 +417,8 @@ nav i{
 
 .box2{
     margin-left: 80px;
-    background-color: rgba(31, 132, 190, 0.753);
-    height: 300px;
+    background-color: #2E2E2E;
+    height: 250px;
     width: 300px;
     color: rgb(0, 0, 0);
     font-size: 1.5rem;
@@ -405,7 +427,7 @@ nav i{
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    box-shadow: 4px 5px 20px 5px rgb(160, 159, 159);
+    /* box-shadow: 4px 5px 20px 5px  rgba(78, 78, 78, 0.87); */
     position: relative;
     overflow: hidden;
     z-index: 1;
@@ -413,15 +435,16 @@ nav i{
 }
 
 .box2:hover{
-    scale: 1.1;
-    box-shadow: 4px 5px 20px 5px rgb(128, 6, 6);
-    transform: rotate(3deg);
+    /* scale: 1.1; */
+    /* box-shadow: 4px 5px 20px 5px rgb(128, 6, 6); */
+    transform: translate(0,-20px); 
+    background: rgba(201, 159, 21, 0.815);
 }
 
 .box3{
     margin-left: 80px;
-    background-color: rgba(31, 132, 190, 0.753);
-    height: 300px;
+    background-color: #2E2E2E;
+    height: 250px;
     width: 300px;
     color: rgb(0, 0, 0);
     font-size: 1.5rem;
@@ -430,7 +453,7 @@ nav i{
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    box-shadow: 4px 5px 20px 5px rgb(158, 158, 158);
+    /* box-shadow: 4px 5px 20px 5px  rgba(78, 78, 78, 0.87); */
     position: relative;
     overflow: hidden;
     z-index: 1;
@@ -438,9 +461,10 @@ nav i{
 }
 
 .box3:hover{
-    scale: 1.1;
-    box-shadow: 4px 5px 20px 5px rgb(5, 207, 89);
-    transform: rotate(3deg);
+    /* scale: 1.1; */
+    /* box-shadow: 4px 5px 20px 5px rgb(5, 207, 89); */
+    transform: translate(0,-20px); 
+    background:rgba(8, 116, 179, 0.808);
 }
 
 
@@ -463,64 +487,6 @@ nav i{
     transition: .2s ease-in;
 }
 /* skill section ends */
-
-
-/* projects section starts */
-#pj-heading{
-    text-align: center;
-    font-size: 2rem;
-    font-weight: 800;
-    margin-top: 8rem;
-    color: rgb(219, 189, 18);
-}
-
-.project{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-
-
-
-.project-1, .project-2, .project-3, .project-4{
-    height: 500px;
-    width: 68rem;
-    margin: 3rem;
-    border-radius: 10px;
-    box-shadow: 3px 3px 15px 3px rgba(185, 47, 47, 0.705);
-}
-
-.project-1{
-    background-image: url("./assets/razer.png");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.project-2{
-    background-image: url("./assets/school.png");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.project-3{
-    background-image: url("./assets/youtube.png");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.project-4{
-    background-image: url("./assets/amazon.png");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-/* projects section ends */
-
 
 
 /* footer section starts */
